# thoughtover

./: .env.example  .gitignore  README.md  pyproject.toml
personas/: default.en.md
src/thoughtover/: __init__.py  beats.py  claude.py  cli.py  config.py  contract.py  ffmpeg.py  gemini.py  personas.py  preflight.py  render.py  script.py  voice.py
